<resources>
    <string name="app_name">Github UAP</string>
    <string name="photo">Photo</string>
    <string name="search_hint">Search...</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="name">Nama</string>
    <string name="username">Username</string>
    <string name="user_not_found">User Not Found</string>
    <string name="followers_not_found">%s Has No Followers</string>
    <string name="following_not_found">%s Does Not Follow Anyone</string>
    <string name="search_message">No search yet</string>

</resources>